# heia

ADO/discolib/: library.json  platformio.ini
ADO/tp02/: .gitignore  .gitlab-ci.yml  platformio.ini
ADO/tp03/: .gitlab-ci.yml
ADO/tp04/: .clang-format  .gitlab-ci.yml  README.md  platformio.ini
CPP/barras-s-tp-3/: .gitlab-ci.yml  CMakeLists.txt  README.md  starbucks.cpp
CPP/barras-s-tp-3/data/: us_starbucks.tsv
CPP/barras-s-tp-3/src/: ClosestPair.cpp  ClosestPair.h  Point.cpp  Point.h  SimpleClosestPair.cpp  SimpleClosestPair.h
CPP/barras-s-tp-3/tests/: ClosestPairTest.cpp  PointTest.cpp
CPP/barras-tp-4/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  benchmark.cpp  benchmark_tests.cpp
CPP/barras-tp-4/src/: Distances.cpp  Distances.h  Interval.h  IntervalTree.h  IntervalTreeElement.h  Point.cpp  Point.h  RangeTree.cpp  RangeTree.h
CPP/barras-tp-4/src/base/: BinaryTree.h  BinaryTreeNode.h  SimpleDistance.cpp  SimpleDistance.h  SimpleIntervalTree.h  SimpleRangeTree.cpp  SimpleRangeTree.h
CPP/barras-tp-4/tests/: BenchmarkTest.cpp  BinaryTreeTest.cpp  IntervalTreeTest.cpp  PointTest.cpp  RangeTreeTest.cpp
CPP/barras-tp-6/: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  server.cpp
CPP/barras-tp-6/includes/Catch2/: catch.hpp
CPP/barras-tp-6/includes/httplib/: httplib.h
CPP/barras-tp-6/src/: ClosestPair.h  Cluster.cpp  Cluster.h  Clustering.cpp  Clustering.h  Point.cpp  Point.h  RandomPoints.cpp  RandomPoints.h
CPP/barras-tp-6/tests/: AllTests.cpp  ClusterTest.cpp  PointTest.cpp
CPP/barras-tp-6/web/: index.html  script.js  style.css
CPP/cpp-tp-1-bar/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Calculator.cpp  Calculator.hpp  README.md  main.cpp
CPP/tp-2-barras/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Point.cpp  Point.hpp  README.md  generator.cpp  reader.cpp
CPP/tp-2-barras/shape/: Shape.cpp  Shape.hpp
CPP/tp-2-barras/shape/ellipse/: Ellipse.cpp  Ellipse.hpp
CPP/tp-2-barras/shape/ellipse/circle/: Circle.cpp  Circle.hpp
CPP/tp-2-barras/shape/rectangle/: Rectangle.cpp  Rectangle.hpp
CPP/tp-2-barras/shape/rectangle/square/: Square.cpp  Square.hpp
GL/advj-bar-ter/: .gitignore  README.md
GL/concurp-student-labs/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements.txt
GL/concurrent-systems-exercises/: .gitignore  .gitlab-ci.yml
GL/devops-sim-bar-rom-col/: .gitignore  .gitlab-ci.yml  build.xml  default_build.xml  deploy.yaml.orig  generate-k8s.sh  kube.config.orig  pom.xml
GL/ol-bar-col-ter/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pom.xml  settings.xml
ML/ml-mylittleprojet/: .gitlab-ci.yml  Sub_2.py  Sub_3.py  Sub_4.py  comparator.py  eda.py  notes.md  notes.py  plot_and_clean.py  predicted-t.csv  reduce.py  rendu_final.ipynb  results.txt  train_rf.py  train_svm.py
ML/tp-machine-learning/: .gitignore  README.md
PS5/ps5-docs/: .gitignore  .gitlab-ci.yml  bibliography.bib  cdc.tex  glossary.tex  report.tex
PS5/ps5-ml-model/: .gitignore  README.md  (+3 more)
deeplearning/: CIFAR10-CNN_data_augmentation_non_seq_api_stud_TF.ipynb
(+1852 files in other folders)
